--- a/utils/tsconfig.json
+++ b/utils/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "../tsconfig_base.json",
   "compilerOptions": {
-    "outFile": "../bin/utils.js"
+    "outDir": "./build"
   }
-
 }
