Share typings folder

--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -5,10 +5,11 @@
   },
   "references": [
     {
-      "path": "../utils"
-    },
-    {
       "path": "../converter"
     }
+  ],
+  "include": [
+    "../utils/typings/**/*",
+    "**/*"
   ]
 }
