--- a/tsconfig_base.json
+++ b/tsconfig_base.json
@@ -11,7 +11,6 @@
     "alwaysStrict": true,
     "noEmitHelpers": true,
     "noUnusedLocals": true,
-    "experimentalDecorators": true,
     "keyofStringsOnly": true,
     "lib": [
       "dom",
@@ -24,12 +23,6 @@
       "es2016.array.include",
       "es2017.object"
     ],
-    "moduleResolution": "node",
-    "plugins": [
-      {
-        "name": "tslint-language-service",
-        "ignoreDefinitionFiles": true
-      }
-    ]
+    "moduleResolution": "node"
   }
 }
