--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "typescript3-composite-project",
+  "name": "test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "directories": {
+    "test": "test"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Soul-Master/typescript3-composite-project.git"
+  "scripts": {
+    "build": "tsc -b src & tsc -b test",
+    "clean": "rimraf ./src/build ./test/build",
+    "start": "npm i & npm run clean & npm run build"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Soul-Master/typescript3-composite-project/issues"
-  },
-  "homepage": "https://github.com/Soul-Master/typescript3-composite-project#readme",
   "devDependencies": {
+    "@types/less": "^0.0.34",
+    "rimraf": "^2.6.2",
+    "typescript": "^3.0.1"
   }
 }
