Add declarationMap in compile options

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -6,6 +6,7 @@
     "baseUrl": ".",
     "sourceMap": false,
     "declaration": true,
+    "declarationMap": true,
     "composite": true,
     "types":[]
   },
